Fix images spilling out over the site container

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -8,7 +8,7 @@ h1 {
   font-size: 2em;
 }
 
-a, em, h1, h2, h3, h4, h5, h6, p, span, time, ul, ol, li {
+a, em, h1, h2, h3, h4, h5, h6, p, span, time, ul, ol, li, tr, td {
   color: map-get($thistle, extra-dark);
   font-family: monospace;
 }
