--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -78,3 +78,7 @@ button:disabled {
   cursor: not-allowed;
   background-color: map-get($thistle, extra-dark);
 }
+
+img {
+  max-width: 100%;
+}
